--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="https://w7.pngwing.com/pngs/957/903/png-transparent-smiling-orange-cat-illustration-cat-cartoon-cuteness-cute-cat-comics-face-animals-thumbnail.png" alt="Pink Bow" class="bow">
             <img src="https://w7.pngwing.com/pngs/957/903/png-transparent-smiling-orange-cat-illustration-cat-cartoon-cuteness-cute-cat-comics-face-animals-thumbnail.png" alt="Pink Bow" class="bow">
         </div>
-        <h1>WOOOOOOOOOOOHOOOOOOOOOOO :O</h1>
+        <h1>WOOOHOOO :O</h1>
         <p>Button click kro cutie :3</p>
         <div class="game">
             <button onclick="startGame()">Start</button>
@@ -65,8 +65,8 @@
         <!-- Birthday Message -->
         <div id="birthday-message" class="hidden">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTHh0vMiW1W7bBKpLKoR6miD_xQzr52iFGaqw&s" alt="Birthday Cake" class="birthday-cake">
-            <h1>Happy Birthday ANSHUUUUUUUU :3333</h1>
-            <p>You are my sunshine My only sunshine :333333333</p>
+            <h1>Happy Birthday ANSHUUU:3333</h1>
+            <p>You are my sunshine My only sunshine:33</p>
         </div>
         <div class="bows">
             <img src="https://w7.pngwing.com/pngs/957/903/png-transparent-smiling-orange-cat-illustration-cat-cartoon-cuteness-cute-cat-comics-face-animals-thumbnail.png" alt="Pink Bow" class="bow">
