--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- Background music -->
-    <audio autoplay loop>
+    <audio id="bg-music" loop>
         <source src="https://cdn.pixabay.com/audio/2022/03/09/audio_4cf84600d4.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
@@ -20,9 +20,10 @@
             <img src="https://w7.pngwing.com/pngs/957/903/png-transparent-smiling-orange-cat-illustration-cat-cartoon-cuteness-cute-cat-comics-face-animals-thumbnail.png" alt="Pink Bow" class="bow">
         </div>
         <h1>WOOOHOOO :O</h1>
-        <p>Button click kro cutie :3</p>
+        <p>Dono Button click kro cutie :3</p>
         <div class="game">
             <button onclick="startGame()">Start</button>
+            <button onclick="playMusic()">Play Music
         </div>
 
         <!-- Game 1: Matching Game -->
