--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>Dono Button click kro cutie :3</p>
         <div class="game">
             <button onclick="startGame()">Start</button>
-            <button onclick="playMusic()">Play Music
+            <button onclick="playMusic()">Play Music</button>
         </div>
 
         <!-- Game 1: Matching Game -->
