--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <img src="https://w7.pngwing.com/pngs/957/903/png-transparent-smiling-orange-cat-illustration-cat-cartoon-cuteness-cute-cat-comics-face-animals-thumbnail.png" alt="Pink Bow" class="bow">
         </div>
         <h1>WOOOHOOO :O</h1>
-        <p>Dono Button click kro cutie :3</p>
+        <p>Dono Button click kro cutie :3
+            press START MUSIC FIRST</p>
         <div class="game">
             <button onclick="startGame()">Start</button>
             <button onclick="playMusic()">Play Music</button>
